js/js.translator/testData/incremental/invalidation/defaultParamMethod/main/B.kt
internal abstract class B {
    fun f(x: Int = 42) = x
}
